<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="313dp"
        android:layout_height="315dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:contentDescription="@string/phone_illustration"
        android:src="@mipmap/phone_illustration" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="456dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/intelligent_camera_app"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="186dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/hold_up_your_phone_or_select_an_image_from_your_gallery_to_learn_more_about_peoples_expressions"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:background="@drawable/btn_rounded_transparent"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/analyze_an_image"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>