<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".AnalyzeActivity"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/analyze_an_image"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="440dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="14sp"
        tools:text="Result" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="267dp"
        android:layout_height="265dp"
        android:layout_above="@+id/btnBrowseForImage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="219dp"
        android:contentDescription="@string/image_with_faces_to_analyze" />

    <Button
        android:id="@+id/btnBrowseForImage"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="35dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/select_an_image"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBrowseForCamera"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="92dp"
        android:background="@color/colorAccentTwo"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/take_a_picture"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />


</RelativeLayout>